--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -22,7 +22,8 @@
             </div>
             <div class="btns">
               <div class="btn-outline-gradient-button">
-                <a class="hover-on-white"
+                <a
+                  class="hover-on-white"
                   style="text-decoration: none"
                   href="https://docs.shyft.to"
                   target="_blank"
