--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="hero-button-container-2 text-center">
-          <button class="btn-solid-reg-2 mb-1">Try Shift for Free</button>
+          <button class="btn-solid-reg-2 mb-1">Try Shyft for Free</button>
           <div class="btn-outline-gradient-button">
             <a
               style="text-decoration: none"
@@ -750,7 +750,7 @@
                 <a
                   href="mailto:team@shyft.to"
                   style="text-decoration: none; color: #fff"
-                  >E mail Us</a
+                  >E-mail Us</a
                 >
               </button>
             </div>
