Added few changes

--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -17,7 +17,7 @@
           <div class="hero-button-container">
             <div class="btns">
               <button class="btn-solid-reg-2" routerLink="/get-api-key">
-                Try Shift for Free
+                Try Shyft for Free
               </button>
             </div>
             <div class="btns">
@@ -62,6 +62,7 @@
           <button class="btn-solid-reg-2 mb-1">Try Shyft for Free</button>
           <div class="btn-outline-gradient-button">
             <a
+              class="hover-on-white"
               style="text-decoration: none"
               href="https://docs.shyft.to"
               target="_blank"
