Changed top two sections

--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -98,7 +98,7 @@
           <div class="card time-taking-cards">
             <div class="top-img-container text-center">
               <img
-                class="card-img-top img-fluid"
+                class="img-fluid"
                 src="assets/images/nft-blockchain-3.png"
                 alt="Card image"
               />
@@ -123,7 +123,7 @@
           <div class="card time-taking-cards">
             <div class="top-img-container text-center">
               <img
-                class="card-img-top img-fluid"
+                class="img-fluid"
                 src="assets/images/development-high.png"
                 alt="Card image"
               />
@@ -145,7 +145,7 @@
           <div class="card time-taking-cards">
             <div class="top-img-container text-center">
               <img
-                class="card-img-top img-fluid"
+                class="img-fluid"
                 src="assets/images/analytics-1.png"
                 alt="Card image"
               />
