Added a few minor fixes

--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -40,19 +40,19 @@
         </div>
       </div>
     </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-6 col-sm-6 col-lg-4 text-center text-lg-start">
-        <div class="footer-link-container pt-5">
+    <div class="row d-flex justify-content-center cstm-footer-links">
+      <div class="col-12 col-sm-12 col-lg-4 text-center text-lg-start">
+        <div class="footer-link-container">
           <a href="mailto:team@shyft.to">Contact: team@shyft.to</a>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-lg-4 text-center">
-        <div class="footer-link-container pt-5">
+      <div class="col-12 col-sm-12 col-lg-4 text-center">
+        <div class="footer-link-container">
           <a href="https://docs.shyft.to" target="_blank">Documentation</a>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-lg-4 text-center text-lg-end">
-        <div class="footer-link-container pt-5">
+      <div class="col-12 col-sm-12 col-lg-4 text-center text-lg-end">
+        <div class="footer-link-container">
           <a routerLink="/terms">Terms & Conditions</a>
         </div>
       </div>
