footer links are added

--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -18,13 +18,13 @@
           >
             <span>
               <span class="footer-icons"
-                ><a href="#"
+                ><a href="https://github.com/Shyft-to" target="_blank"
                   ><img
                     src="assets/images/Icons/small-github.svg"
                     alt="Gmail" /></a
               ></span>
               <span class="footer-icons"
-                ><a href="#"
+                ><a href="https://twitter.com/shyft_to" target="_blank"
                   ><img
                     src="assets/images/Icons/small-twitter.svg"
                     alt="Twitter" /></a
