Added Pricing Section

--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -472,7 +472,7 @@
   </div>
 
   <div id="the_pricing" class="container-fluid our-pricing-section">
-    <!-- <div class="container-lg">
+    <div class="container-lg">
       <div class="row">
         <div class="col-sm-10">
           <h3 class="section-sub-heading">Our Pricing</h3>
@@ -693,7 +693,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
     <div class="container-lg">
       <div class="engage-section">
         <div class="row">
