--- a/src/app/modules/shared/components/side-nav/side-nav.component.html
+++ b/src/app/modules/shared/components/side-nav/side-nav.component.html
@@ -24,7 +24,7 @@
     >Read NFTs</a
   > -->
   <a
-    routerLink="/dashboard/create-nft-solana"
+    routerLink="/dashboard/create-nft"
     [ngClass]="page === 3 ? 'active' : ''"
     (click)="navigatePage(3)"
     >Create NFTs (Alpha)</a
