--- a/src/app/modules/authentication/components/list-nft-page/list-nft-page.component.html
+++ b/src/app/modules/authentication/components/list-nft-page/list-nft-page.component.html
@@ -20,7 +20,7 @@
                 <input
                   type="text"
                   class="form-control form-control-lg portfolio-form-styles"
-                  placeholder="Enter Your Wallet Address"
+                  placeholder="Enter Your API Key"
                   formControlName="authorizationKey"
                   (ngModelChange)="onChangeAuthorizationKey($event)"
                   [ngClass]="{
