discord link updated

--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -30,7 +30,7 @@
                     alt="Twitter" /></a
               ></span>
               <span class="footer-icons"
-                ><a href="https://discord.com/invite/BvqNeDSY" target="_blank"
+                ><a href="https://discord.gg/VS5ThWVRMn" target="_blank"
                   ><img
                     src="assets/images/Icons/small-discord.svg"
                     alt="Discord" /></a
