--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -707,7 +707,7 @@
           <div class="col-sm-12 col-md-6 col-lg-6">
             <div class="pt-3 text-center text-md-start">
               <span class="inline-image"
-                ><a href="https://discord.com/invite/BvqNeDSY" target="_blank"
+                ><a href="https://discord.gg/VS5ThWVRMn" target="_blank"
                   ><img src="assets/images/Icons/discord.svg" alt="" /><span
                     >Discord</span
                   ></a
@@ -721,7 +721,7 @@
             <div class="text-center text-md-start">
               <a
                 class="btn-solid-reg fixed-width-new text-center"
-                href="https://discord.com/invite/BvqNeDSY"
+                href="https://discord.gg/VS5ThWVRMn"
                 target="_blank"
                 >Join community</a
               >
