calendly popup added at landing page

--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -21,15 +21,8 @@
               </button>
             </div>
             <div class="btns">
-              <div class="btn-outline-gradient-button">
-                <a
-                  class="hover-on-white"
-                  style="text-decoration: none"
-                  href="https://docs.shyft.to"
-                  target="_blank"
-                >
-                  <div class="inner-white-area text-center">Read Docs</div>
-                </a>
+              <div class="btn-outline-gradient-button" (click)="talkToAnExpert()">
+                <div class="inner-white-area text-center">Talk to an Expert</div>
               </div>
             </div>
           </div>
@@ -770,4 +763,5 @@
     </div>
   </div>
 </div>
+<div class="calendly-popup-widget" data-auto-load="false"></div>
 <app-footer></app-footer>
