Added calendly component to mobile

--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -54,14 +54,19 @@
         <div class="hero-button-container-2 text-center">
           <button class="btn-solid-reg-2 mb-3">Try Shyft for Free</button>
           <div class="btn-outline-gradient-button">
-            <a
+            <!-- <a
               class="hover-on-white"
               style="text-decoration: none"
               href="https://docs.shyft.to"
               target="_blank"
             >
               <div class="inner-white-area">Read Docs</div>
-            </a>
+            </a> -->
+            <div class="btns">
+              <div class="" (click)="talkToAnExpert()">
+                <div class="inner-white-area text-center">Talk to an Expert</div>
+              </div>
+            </div>
           </div>
           <p class="p-para-normal">
             If you already have an API key,
